# MarineVesselSimulator

./: CMakeLists.txt  README.md
data/hull_shapes/: rectangle.txt  triangular_bow.txt
include/: geometry.hpp  hull_shape.hpp  simulator.hpp  vessel.hpp
src/: geometry.cpp  main.cpp  simulator.cpp  vessel.cpp
